fixe ios header and project image overlapping stuff

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -30,7 +30,7 @@ header{
 body > header {
   display: block;
   > hgroup > h1{
-    font-size: 4em;
+    font-size: 3em;
   }
 }
 @media only screen and (min-width: 768px) {
@@ -248,4 +248,9 @@ aside.sidebar{
   display: block;
   font-size: 0.8em;
   text-shadow: none;
+}
+
+#projects li{
+  //height: 4em;
+  overflow: hidden;
 }
